--- a/CursachPrototype/Web.config
+++ b/CursachPrototype/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
@@ -114,4 +115,23 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="default" xsi:type="File"
+              fileName="C:\logs\app-log.txt"
+              archiveFileName="C:\logs\archives\app-log.{#}.txt"
+              archiveEvery="Day"
+              archiveNumbering="Rolling"
+              maxArchiveFiles="7" />
+      <target name="errors" xsi:type="File"
+              fileName="C:\logs\app-errors.txt"
+              archiveFileName="C:\logs\archives\app-errors.{#}.txt"
+              archiveNumbering="Rolling"
+              maxArchiveFiles="7" />
+    </targets>
+    <rules>
+      <logger name="*" writeTo="default" />
+      <logger name="*" minlevel="Error" writeTo="errors" />
+    </rules>
+  </nlog>
 </configuration>
