--- a/CursachPrototype/packages.config
+++ b/CursachPrototype/packages.config
@@ -35,6 +35,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="NLog" version="4.5.6" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
