--- a/DataProxy/packages.config
+++ b/DataProxy/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.11" targetFramework="net452" />
+  <package id="NLog" version="4.5.6" targetFramework="net452" />
 </packages>
